# pio-espidf-aws-mqtt-ota

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32dev
main/: CMakeLists.txt
